Fixed vertical align and background image

--- a/app/assets/stylesheets/session_forms/form.scss
+++ b/app/assets/stylesheets/session_forms/form.scss
@@ -1,7 +1,3 @@
-body {
-  background: image-url("discord_background.jpeg")
-}
-
 .form-link {
   color: #7289DA;
   font-size: 11px;
